--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
         "tailwindcss": "^3.4.4",
         "vite": "^5.0.0",
         "vue": "^3.2.37"
+    },
+    "dependencies": {
+        "bootstrap-icons": "^1.11.3"
     }
 }
